# rust-zero-to-prod

./: .env  Cargo.toml  Dockerfile  README.md  rustfmt.toml  sqlx-data.json
.github/workflows/: rust.yaml
config/: base.yaml  local.yaml  production.yaml
migrations/: 20230430191924_make_status_not_null_in_subscriptions.sql  20230430192113_create_subscriptions_tokens_table.sql  20230624212239_seed_user.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  session.rs  startup.rs  telemetry.rs
src/authentication/: middleware.rs  password.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: http_utils.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletter/: get.rs  mod.rs  post.rs
src/routes/admin/password/: get.rs  mod.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health.rs  health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscription.rs  subscriptions.rs  subscriptions_confirm.rs
