[package]
name = "z2p"
version = "0.1.0"
edition = "2021"

[lib]
path="src/lib.rs"

[[bin]]
path="src/main.rs"
name="zero2prod"

[dependencies]
actix-web = "4"
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
config = "0.13.3"
once_cell = "1.17.1"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.160", features = [ "derive" ] }
serde-aux = "4.2.0"
tokio = { version = "1", features = [ "macros", "rt-multi-thread"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-actix-web = "0.7.4"
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3", features = [ "registry", "env-filter" ] }
unicode-segmentation = "1.10.1"
uuid = { version = "1.3.1", features = ["v4"] }

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline"
]


[dev-dependencies]
claims = "0.7.1"
reqwest = "0.11"
