[package]
name = "z2p"
version = "0.1.0"
edition = "2021"

[lib]
path="src/lib.rs"

[[bin]]
path="src/main.rs"
name="zero2prod"

[dependencies]
actix-web = "4.3.1"
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
config = "0.13.3"
once_cell = "1.17.1"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.160", features = [ "derive" ] }
serde-aux = "4.2.0"
tokio = { version = "1", features = [ "macros", "rt-multi-thread"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-actix-web = "0.7.4"
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = [ "registry", "env-filter" ] }
unicode-segmentation = "1.10.1"
uuid = { version = "1.3.3", features = ["v4"] }
validator = "0.16.0"

[dependencies.sqlx]
version = "0.6.3"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline"
]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = [ "json", "rustls-tls" ]


[dev-dependencies]
claims = "0.7.1"
fake = "~2.3"
linkify = "0.9"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
serde_json = "1"
tokio = { version = "1", features = [ "rt", "macros"] }
wiremock = "0.5"
