[package]
name = "zero2prod"
version = "0.1.0"
authors = ["1602077"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-session = { version = "0.7.2", features = ["redis-rs-tls-session"] }
actix-web = "4.3.1"
actix-web-flash-messages = { version = "0.4.2", features = ["cookies"] }
anyhow = "1.0.40"
argon2 = { version = "0.5.0", features = ["std"] }
base64 = "0.21.2"
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
config = { version = "0.13.3", default-features = false, features = ["yaml"] }
htmlescape = "0.3.1"
log = "0.4.17"
rand = { version = "0.8.5", features=["std_rng"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = "1.0.115"
serde-aux = "4"
serde_json = "1.0.61"
thiserror = "1.0.40"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-actix-web = "0.7.4"
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
unicode-segmentation = "1.7.1"
urlencoding = "2.1.2"
uuid = { version = "1", features = ["v4", "serde"] }
validator = "0.16"

[dependencies.sqlx]
version = "0.6" 
default-features = false 
features = [
    "runtime-actix-rustls",
    "macros", 
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
] 

[dependencies.reqwest]
version = "0.11.18" 
default-features = false 
features = ["json", "rustls-tls", "cookies"]

[dev-dependencies]
claims = "0.7.1"
fake = "~2.3.0"
linkify = "0.9"
once_cell = "1.7.2"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.61"
wiremock = "0.5"
